# filen-menubar

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: install-linux.sh  logs.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/locales/: de.yml  en.yml
src-tauri/src/: actions.rs  cli.rs  config.rs  credentials.rs  error.rs  lib.rs  logging.rs  main.rs  state.rs  update.rs
src-tauri/src/cli/: discovery.rs  events.rs  framer.rs  mod.rs  network.rs  process.rs
src-tauri/src/tray/: linux.rs  macos.rs  mod.rs
src-tauri/tests/: cli_events.rs  state_machine.rs
src-tauri/tests/common/: mod.rs
