[package]
name = "filen-menubar"
version = "0.1.17"
description = "A lightweight menubar app for Filen cloud sync"
authors = ["Philipp Gerard"]
edition = "2021"

[lib]
name = "filen_menubar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "rt-multi-thread", "macros"] }
# keyring = "3"  # Not needed - using CLI's stored session
dirs = "5"
thiserror = "2"
log = "0.4"
fern = "0.7"
chrono = "0.4"
open = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-dialog = "2.4.2"
rust-i18n = "3"
sys-locale = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.3"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
